<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:theme="@style/AppTheme.Transition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonActivity"
    android:background="@color/gray_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/timer_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:max="60"
            android:progressDrawable="@drawable/progress_bar_custom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/afi_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/afi" />

            <TextView
                android:id="@+id/activity_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/days_one"
                android:textAlignment="center"
                android:textColor="@color/off_white"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="77dp"
            android:hint="@string/type_answer"
            android:padding="8dp"
            android:textColorHint="@color/off_white"
            app:hintTextColor="@color/off_white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/days_one"
                android:inputType="text"
                android:textColor="@color/off_white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/days_one"
            android:maxWidth="160dp"
            android:padding="12dp"
            android:text="@string/answer"
            android:textColor="@color/off_white"
            android:textSize="16sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>